--- a/.pipeline/atcSystemConfig.json
+++ b/.pipeline/atcSystemConfig.json
@@ -6,12 +6,11 @@
 	"is_default": false,
 	"is_proxy_variant": false,
 	"transport_check_policy": "G",
-	"check_tasks": "X",
+	"check_tasks": true,
 	"_priorities": [
 		{
 			"test": "CL_CI_TEST_EXTENDED_SEC",
-			"message_id": "010",
-			"default_priority": 1,
+			"message_id": "0821",
 			"priority": 2
 		}
 	]
