--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -5,3 +5,4 @@ stages:
   ATC:
     atcConfig: '.pipeline/atcConfig.yml'
     atcSystemConfigFilePath: '.pipeline/atcSystemConfig.json'
+    failOnSeverity: 'error'
